name:                integer-gmp
version:             1.0.0.1
synopsis:            Integer library based on GMP
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Numeric, Algebra
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: changelog.md

library
  default-language:    Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DeriveDataTypeable
    ExplicitForAll
    GHCForeignImportPrim
    MagicHash
    NegativeLiterals
    NoImplicitPrelude
    RebindableSyntax
    StandaloneDeriving
    UnboxedTuples
  build-depends:       ghc-prim
  hs-source-dirs:      src/
  ghc-options: -this-unit-id integer-gmp -Wall -O2 -split-sections -ddump-to-file -ddump-simpl -ddump-stg -ddump-cmm-raw

  exposed-modules:
    GHC.Integer
    GHC.Integer.Logarithms
    GHC.Integer.Logarithms.Internals

    GHC.Integer.GMP.Internals

  other-modules:
    GHC.Integer.Type
